clusters/apps/platform/traefik/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
